--- a/manager/web/index.html
+++ b/manager/web/index.html
@@ -2,25 +2,37 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8" />
-<title>Manager</title>
+<link rel="stylesheet/less" type="text/css" href="style.less">
+<title>ScoreServer</title>
 </head>
 <body>
-<p>Socket ID: <input type="text" id="socket_id" /></p>
+<div id="container">
+	<article id="manager">
+		<h1>Manager</h1>
+		<p><label for="sid">ServerID:</label><input type="text" name="sid" id="sid" /></p>
+		<p>制御可能ID: <span id="servers"></span></p>
+		
+		<h2>試合制御</h2>
+		<p><button id="game_start" class="geme_ctrl">開始</button> <button id="game_stop" class="game_ctrl">強制停止</button></p>
+		
+		<h2>マップ送信</h2>
+		<textarea id="map" rows="5"></textarea>
+		<p><button id="map_send">Send</button></p>
+		
+		<h2>情報</h2>
+		<div id="log"></div>
+	</article>
 
-<h1>マップ送信</h1>
-<p>Mapデータ: <textarea id="map_data"></textarea></p>
-<p><button id="map_button">送信</button></p>
-
-<h1>開始</h1>
-<p><button id="start_button">開始</button></p>
-
-
-<h1>強制終了</h1>
-<p><button id="stop_button">終了</button></p>
-
-
-
-
+	<article id="score">
+		<table id="board">
+			<tr><td></td><td></td><td></td><td></td><td></td></tr>
+			<tr><td></td><td></td><td></td><td></td><td></td></tr>
+			<tr><td></td><td></td><td></td><td></td><td></td></tr>
+			<tr><td></td><td></td><td></td><td></td><td></td></tr>
+		</table>
+	</article>
+</div>
+<script src="less.js" type="text/javascript"></script>
 <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 <script type="text/javascript">google.load('jquery', '1')</script>
 <script src="/socket.io/socket.io.js"></script>
