--- a/manager/web/index.html
+++ b/manager/web/index.html
@@ -26,7 +26,11 @@
 	</article>
 
 	<article id="score">
-		<p><span id="c_name"></span><span id="c_item"></span> <span id="turn"></span> <span id="h_name"></span><span id="h_item"></span></p>
+		<!-- <div class="side" id="side_a"><p class="name">Arata</p><p class="item">|-| /\ 1_ ( (-) a |\!</p></div> -->
+		<div class="side" id="side_c"><p class="name"></p><p class="item"></p></div>
+		<div class="side" id="side_h"><p class="name"></p><p class="item"></p></div>
+		<p>Turn: <span id="turn"></span><span id="result"></span></p>
+
 		<table id="board">
 			<tr><td></td><td></td><td></td><td></td><td></td></tr>
 			<tr><td></td><td></td><td></td><td></td><td></td></tr>
