--- a/manager/web/index.html
+++ b/manager/web/index.html
@@ -27,8 +27,8 @@
 
 	<article id="score">
 		<!-- <div class="side" id="side_a"><p class="name">Arata</p><p class="item">|-| /\ 1_ ( (-) a |\!</p></div> -->
-		<div class="side" id="side_c"><p class="name"></p><p class="item"></p></div>
-		<div class="side" id="side_h"><p class="name"></p><p class="item"></p></div>
+		<div class="side" id="side_c"><p>COOL</p><p class="name"></p><p class="item"></p></div>
+		<div class="side" id="side_h"><p>HOT</p><p class="name"></p><p class="item"></p></div>
 		<p>Turn: <span id="turn"></span><span id="result"></span></p>
 
 		<table id="board">
