ServerIDの入力改善2

--- a/manager/web/index.html
+++ b/manager/web/index.html
@@ -11,8 +11,8 @@
 		<header id="to_score" class="button large square white">Score →</header>
 	
 		<h1>Manager</h1>
-		<p><label for="sid">ServerID:</label><input type="text" name="sid" id="sid" /></p>
-		<p>接続中ID: <span id="servers"></span></p>
+		<p><label for="sid">操作中ServerID</label><input type="text" name="sid" id="sid" /></p>
+		<p>認識中ServerID: <span id="servers"></span></p>
 		
 		<h2>試合制御</h2>
 		<p><button id="game_start" class="game_ctrl button large square white">開始</button> <button id="game_stop" class="game_ctrl button large square white">強制終了</button></p>
