マップ入力改善

--- a/manager/web/index.html
+++ b/manager/web/index.html
@@ -18,7 +18,8 @@
 		<p><button id="game_start" class="game_ctrl button large square white">開始</button> <button id="game_stop" class="game_ctrl button large square white">強制終了</button></p>
 		
 		<h2>マップ</h2>
-		<textarea id="map" rows="5">D&amp;Dすると良いかも(未実装)</textarea>
+		<p><label for="map_file">ファイルから</label><input name="map_file" id="map_file" type="file" /></p>
+		<textarea id="map" rows="5">ここに直に書いてもOK</textarea>
 		<p><button id="map_send" class="button large square white">送信</button></p>
 		
 		<h2>生データ</h2>
